--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width", initial-scale=1.0>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Survey</title>
     <body>
     
@@ -15,8 +15,8 @@
             <Button class="Yes">Yes</Button>
             <Button class="No">No</Button>
         <div>
-            <audio class="mp3"  src="kinikilig.mp3"></audio>
-            <audio class="mp4"  src="Christmas Tree.mp3"></audio>
+            <audio class="mp3"  src="Akoy kinikilig memes.mp3"></audio>
+            <audio class="mp4"  src="Sad song meme.mp3"></audio>
         </div>
         </div>
             <link rel="stylesheet" href="style.css"/>
